--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -3,16 +3,14 @@ development:
   clients:
     # Defines the default client. (required)
     default:
-      # uri: mongodb://heroku_5jnx9z69:8o7tdeafj67st2gq983scl9b6m@ds225859-a0.mlab.com:25859,ds225859-a1.mlab.com:25859/heroku_5jnx9z69?replicaSet=rs-ds225859
       # Defines the name of the default database that Mongoid can connect to.
       # (required).
-      # database: mixxi_dev_development
-      # # database: filo_api_rails_development
-      # # Provides the hosts the default client can connect to. Must be an array
-      # # of host:port pairs. (required)
-      # hosts:
-      #   - localhost:27017
-      # options:
+      database: filo_api_rails_development5
+      # Provides the hosts the default client can connect to. Must be an array
+      # of host:port pairs. (required)
+      hosts:
+        - localhost:27017
+      options:
         # Note that all options listed below are Ruby driver client options (the mongo gem).
         # Please refer to the driver documentation of the version of the mongo gem you are using
         # for the most up-to-date list of options.
@@ -157,7 +155,7 @@ development:
 test:
   clients:
     default:
-      database: filo_api_rails_test
+      database: filo_api_rails_test5
       hosts:
         - localhost:27017
       options:
