--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -162,3 +162,11 @@ test:
         read:
           mode: :primary
         max_pool_size: 1
+
+production:
+    clients:
+        default:
+            uri: <%= ENV['MONGODB_URI'] %>
+        options:
+            skip_version_check: true
+        safe: true
