--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -163,10 +163,22 @@ test:
           mode: :primary
         max_pool_size: 1
 
+# production:
+#     clients:
+#         default:
+#             uri: <%= ENV['MONGODB_URI'] %>
+#         options:
+#             skip_version_check: true
+#         safe: true
+
 production:
-    clients:
-        default:
-            uri: <%= ENV['MONGODB_URI'] %>
-        options:
-            skip_version_check: true
-        safe: true
+  clients:
+    default:
+      database: filomobileapi
+      hosts:
+        - localhost:27017
+      options:
+        read:
+          mode: primary
+        max_pool_size: 1
+
